# madmom-modern

./: .gitignore  README.md  pyproject.toml  setup.py
madmom/: __init__.py
madmom/evaluation/: tempo.py
madmom/features/: beats.py  downbeats.py
madmom/ml/: hmm.pyx
madmom/ml/nn/: activations.py
madmom/models/: model_manifest.json
madmom/models/beats/2013/: beats_blstm_1.pkl  beats_blstm_2.pkl  beats_blstm_3.pkl  beats_blstm_4.pkl  beats_blstm_5.pkl  beats_blstm_6.pkl  beats_blstm_7.pkl  beats_blstm_8.pkl
madmom/models/beats/2015/: beats_blstm_1.pkl  beats_blstm_2.pkl  beats_blstm_3.pkl  beats_blstm_4.pkl  beats_blstm_5.pkl  beats_blstm_6.pkl  beats_blstm_7.pkl  beats_blstm_8.pkl
madmom/models/beats/2016/: beats_lstm_1.pkl  beats_lstm_2.pkl  beats_lstm_3.pkl  beats_lstm_4.pkl  beats_lstm_5.pkl  beats_lstm_6.pkl  beats_lstm_7.pkl  beats_lstm_8.pkl
madmom/models/chords/2016/: chords_cnncrf.pkl  chords_cnnfeat.pkl  chords_dccrf.pkl
madmom/models/chroma/2016/: chroma_dnn.pkl
madmom/models/downbeats/2016/: downbeats_bgru_harmonic_0.pkl  downbeats_bgru_harmonic_1.pkl  downbeats_bgru_harmonic_2.pkl  downbeats_bgru_harmonic_3.pkl  downbeats_bgru_harmonic_4.pkl  downbeats_bgru_harmonic_5.pkl  downbeats_bgru_rhythmic_0.pkl  downbeats_bgru_rhythmic_1.pkl  downbeats_bgru_rhythmic_2.pkl  downbeats_bgru_rhythmic_3.pkl  downbeats_bgru_rhythmic_4.pkl  downbeats_bgru_rhythmic_5.pkl  downbeats_blstm_1.pkl  downbeats_blstm_2.pkl  downbeats_blstm_3.pkl  downbeats_blstm_4.pkl  downbeats_blstm_5.pkl  downbeats_blstm_6.pkl  downbeats_blstm_7.pkl  downbeats_blstm_8.pkl
madmom/models/key/2017/: key_cnn_1.pkl  key_cnn_2.pkl  key_cnn_3.pkl  key_cnn_4.pkl
madmom/models/key/2018/: key_cnn.pkl
madmom/models/notes/2013/: notes_brnn.pkl
madmom/models/notes/2018/: notes_cnn_1.pkl  notes_cnn_2.pkl
madmom/models/notes/2019/: notes_cnn.pkl
madmom/models/onsets/2013/: onsets_brnn_1.pkl  onsets_brnn_2.pkl  onsets_brnn_3.pkl  onsets_brnn_4.pkl  onsets_brnn_5.pkl  onsets_brnn_6.pkl  onsets_brnn_7.pkl  onsets_brnn_8.pkl  onsets_cnn.pkl  onsets_rnn_1.pkl  onsets_rnn_2.pkl  onsets_rnn_3.pkl  onsets_rnn_4.pkl  onsets_rnn_5.pkl  onsets_rnn_6.pkl  onsets_rnn_7.pkl  onsets_rnn_8.pkl
madmom/models/onsets/2014/: onsets_brnn_pp_1.pkl  onsets_brnn_pp_2.pkl  onsets_brnn_pp_3.pkl  onsets_brnn_pp_4.pkl  onsets_brnn_pp_5.pkl  onsets_brnn_pp_6.pkl  (+2 more)
samples/: README.md
scripts/: migrate_models.py  regenerate_manifest.py
tests/: test_audio_comb_filters.py  test_audio_filters.py  test_audio_signal.py  test_audio_spectrogram.py  test_audio_stft.py  test_bin_evaluate.py  test_evaluation.py  test_evaluation_beats.py  test_features_beats_hmm.py  test_features_tempo.py  test_io_audio.py  test_ml_hmm.py  test_ml_nn.py  test_utils.py
webapp/: README.md  __init__.py  app.py  requirements.txt
webapp/templates/: index.html
(+2 files in other folders)
